<resources>
    <string name="app_name">musica</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="facebook_app_id"/>
    <string name="fb_login_protocol_scheme">fb</string>
    <string name="facebook_client_token"/>
<string name="lbl_continue">Continue</string>
<string name="lbl_logout">Logout</string>
<string name="msg_play_video_podc">Play video podcasts as audio only when not connected on Wi-Fi.</string>
<string name="lbl_united_states">United States</string>
<string name="lbl_jamie_gray">Jamie Gray</string>
<string name="lbl_suggested">Suggested</string>
<string name="msg_shuffle_play">Shuffle play &amp; download unlimited</string>
<string name="msg_concert_notific">Concert Notifications</string>
<string name="lbl_ariana_grande">Ariana Grande</string>
<string name="msg_allows_gapless">Allows gapless playback.</string>
<string name="lbl_the">The</string>
<string name="lbl_katy_perry">Katy Perry</string>
<string name="msg_2_light_walkthr">2_Light_walkthrough</string>
<string name="lbl_canvas">Canvas</string>
<string name="lbl_49_99">$49.99</string>
<string name="lbl_sharks">Sharks</string>
<string name="lbl_more_like_this">More Like This</string>
<string name="lbl_345_songs">345 songs</string>
<string name="lbl_phone_number">Phone Number</string>
<string name="lbl_app_navigation">App Navigation</string>
<string name="lbl_downloads_one">Downloads One</string>
<string name="msg_the_jordan_harb">The Jordan Harb...</string>
<string name="msg_listen_to_the_b">Listen to the best music everyday with Tunecast now!</string>
<string name="lbl_product_news">Product News</string>
<string name="lbl_review_summary">Review Summary</string>
<string name="lbl_53">53</string>
<string name="lbl_04_45_mins">04:45 mins</string>
<string name="msg_listen_to_the_b2">Listen to the best music everyday with </string>
<string name="lbl_the_mayries">The Mayries</string>
<string name="msg_top_hits_indo">TOP HITS - Indonesia</string>
<string name="lbl_clear_all">Clear All</string>
<string name="lbl_singers">Singers</string>
<string name="msg_create_your_new">Create Your New Password</string>
<string name="lbl_normal">Normal</string>
<string name="msg_resend_code_in">Resend code in 53 s</string>
<string name="lbl_tunecast">Tunecast</string>
<string name="lbl_month">/month</string>
<string name="lbl_remove_download">Remove Download</string>
<string name="lbl_expiry_date">Expiry date</string>
<string name="msg_set_your_finger">Set Your Fingerprint</string>
<string name="lbl_recently_added">Recently Added</string>
<string name="lbl_ania_szarmach">Ania Szarmach</string>
<string name="msg_3_light_lets_yo">3_Light_lets you in</string>
<string name="lbl_1_439_followers">1,439 Followers</string>
<string name="lbl_03_58_mins">03:58 mins</string>
<string name="lbl_starboy">Starboy</string>
<string name="lbl_downloaded">Downloaded</string>
<string name="lbl_42">4</string>
<string name="lbl_shuffle_play">Shuffle Play</string>
<string name="msg_add_new_playlis">Add New Playlist</string>
<string name="lbl_disaster">Disaster</string>
<string name="lbl_alexisonfire">Alexisonfire</string>
<string name="lbl_save_your_tears">Save Your Tears</string>
<string name="lbl_kendrick_lamar">Kendrick Lamar</string>
<string name="lbl_682_episodes">682 Episodes</string>
<string name="lbl_artist">Artist</string>
<string name="lbl_juice_wrld">Juice Wrld</string>
<string name="lbl_sort_by">Sort by</string>
<string name="lbl_playlists">Playlists</string>
<string name="lbl_like">Like</string>
<string name="msg_autoplay_on_thi">Autoplay on This Device</string>
<string name="lbl_12_songs">12 Songs</string>
<string name="lbl_face_id">Face ID</string>
<string name="lbl_the_bended_man">The Bended Man</string>
<string name="lbl_drake">Drake</string>
<string name="lbl_playback">Playback</string>
<string name="lbl_mark_as_played">Mark as Played</string>
<string name="lbl_top_100">TOP 100</string>
<string name="lbl_32">3</string>
<string name="lbl_password">Password</string>
<string name="lbl_48_26_mins">48:26 mins</string>
<string name="lbl_podcasters">Podcasters</string>
<string name="msg_follow_your_fav">Follow your favorite artists. Or you can skip it for now.</string>
<string name="lbl_go_to_album">Go to Album</string>
<string name="lbl_1_day_ago">1 day ago</string>
<string name="msg_65_light_albums">65_Light_albums more option</string>
<string name="msg_notification_se">Notification Settings</string>
<string name="msg_the_agony_ecs">The Agony &amp; Ecstasy Of Wa...</string>
<string name="lbl_9_489_followers">9,489 Followers</string>
<string name="lbl_2_798_followers">2,798 Followers</string>
<string name="msg_the_real_world">The real-world experience Shaq endured preparing for a political race in 2020.
How Shaq assembled what he calls The Panel to help manage not only his career but all his important life decisions \u2014 and how you can do the same.
Why Shaq doesn\u2019t consider himself a celebrity (and why that still isn\u2019t a good reason to bug him in the middle of dinner).
How Shaq manages his emotions so he stays non-reactive on and off the court.
Does Shaq really believe in the Flat Earth Theory?
And much more...view here --</string>
<string name="lbl_wi_fi_streaming">Wi-Fi Streaming</string>
<string name="lbl_shades_of_love">Shades of Love</string>
<string name="lbl_22">2</string>
<string name="msg_ariana_grande">Ariana Grande - All Songs </string>
<string name="msg_top_albums_unit">Top Albums United..</string>
<string name="lbl_video_quality">Video Quality</string>
<string name="lbl_acidrap">Acidrap</string>
<string name="msg_playlist_update">Playlist Updates</string>
<string name="lbl_follow_artists">Follow Artists</string>
<string name="lbl_rock">Rock</string>
<string name="lbl_indonesia">Indonesia</string>
<string name="lbl_categories">Categories</string>
<string name="lbl_1_111_99">+1 111 ******99</string>
<string name="lbl_mandarin">Mandarin</string>
<string name="msg_my_favorite_aco">My Favorite Acoustic Song</string>
<string name="msg_top_albums_glob">TOP
ALBUMS
GLOBAL</string>
<string name="lbl_alexander_23">Alexander 23</string>
<string name="msg_1_111_467_378">+1 111 467 378 399</string>
<string name="lbl_6_months">/6 months</string>
<string name="msg_sets_your_audio">Sets your audio quality to low (24kbit/s) and disables artist canvases.</string>
<string name="lbl_04_36_mins">04:36 mins</string>
<string name="lbl_12_27_1995">12/27/1995</string>
<string name="lbl_english_us">English (US)</string>
<string name="lbl_jenny_winkles">Jenny Winkles</string>
<string name="lbl_clear_cache">Clear Cache</string>
<string name="lbl_sign_up">Sign up</string>
<string name="msg_weekly_song_cha">Weekly Song Charts</string>
<string name="lbl_52_20_mins">52:20 mins</string>
<string name="lbl_my_everything">My Everything</string>
<string name="lbl_8_811_followers">8,811 Followers</string>
<string name="lbl_russian">Russian</string>
<string name="lbl_politics">Politics</string>
<string name="lbl_english_uk">English (UK)</string>
<string name="lbl_75_4_gb">75.4 GB</string>
<string name="lbl_2_739">2,739</string>
<string name="msg_most_popular_so">Most Popular Songs</string>
<string name="msg_top_albums_glob2">Top Albums Global</string>
<string name="lbl_play">Play</string>
<string name="lbl_biometric_id">Biometric ID</string>
<string name="lbl_equalizer">Equalizer</string>
<string name="msg_podcast_episode">Podcast Episode Details</string>
<string name="lbl_trending_now">Trending Now</string>
<string name="lbl_via_sms">via SMS:</string>
<string name="lbl_roar">Roar</string>
<string name="lbl_more_options">More Options</string>
<string name="lbl_other_apps">Other Apps</string>
<string name="lbl_the_weeknd">The Weeknd</string>
<string name="lbl_security">Security</string>
<string name="msg_forgot_the_pass">Forgot the password?</string>
<string name="lbl_library">Library</string>
<string name="msg_the_most_played">The most played albums from last week.</string>
<string name="lbl_playlist">Playlist</string>
<string name="lbl_push">Push</string>
<string name="lbl_add">Add</string>
<string name="msg2">\u2022\u2022\u2022\u2022 \u2022\u2022\u2022\u2022 \u2022\u2022\u2022\u2022 \u2022\u2022\u2022\u2022 4679</string>
<string name="msg_search_resilt_p">Search Resilt Profile</string>
<string name="msg_487_mike_rowe">487: Mike Rowe | Dirty Jobs and Pe..</string>
<string name="lbl_ok">OK</string>
<string name="lbl_songs">Songs</string>
<string name="lbl_or">or</string>
<string name="lbl_update">Update</string>
<string name="lbl_dark_funeral">Dark Funeral</string>
<string name="lbl_38_29_mins">38:29 mins</string>
<string name="lbl_shuffle">Shuffle</string>
<string name="msg_most_popular_so2">Most Popular Songs Latest Releases and Updates</string>
<string name="msg_shaquille_o_nea2">"Shaquille O'Neal (@SHAQ) has been retired from basketball for years, but he\u2019s still got his irons in plenty of fires. Here, we\u2019ll discuss everything from superheroes to law enforcement to business to sports to podcasting to \u2014 yes \u2014 the Flat Earth Theory.

"</string>
<string name="msg_artists_songs">Artists, Songs, Podcasts, &amp; More</string>
<string name="msg_jenny_ballentin">Jenny Ballentine</string>
<string name="msg_please_put_your">Please put your finger on the fingerprint scanner to get started.</string>
<string name="lbl_free_space">Free Space</string>
<string name="lbl_9_99">$9.99</string>
<string name="lbl4">*************</string>
<string name="lbl5">⚫</string>
<string name="lbl2">\u2022\u2022\u2022\u2022 \u2022\u2022\u2022\u2022</string>
<string name="lbl3">\u2022\u2022\u2022\u2022/\u2022\u2022\u2022\u2022</string>
<string name="lbl_home">Home</string>
<string name="msg_search_type_key">Search Type Keyword</string>
<string name="lbl_top_hits">TOP HITS</string>
<string name="msg_recently_downlo">Recently Downloaded</string>
<string name="msg_lorem_ipsum_dol2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad, </string>
<string name="msg_mr_morale_th">Mr. Morale &amp; The Big Stepp...</string>
<string name="msg_938_tom_wright">938: Tom Wright | Billion Dollar Wh...</string>
<string name="lbl_set_fingerprint">Set Fingerprint</string>
<string name="lbl_song">Song</string>
<string name="lbl_single">Single</string>
<string name="lbl_conan_gray">Conan Gray</string>
<string name="lbl_splash">Splash</string>
<string name="msg_sign_in_with_pa">Sign in with password</string>
<string name="lbl_notifications">Notifications</string>
<string name="msg_fly_me_to_the_s">Fly Me To The Sun</string>
<string name="lbl_song_details">Song Details</string>
<string name="msg_show_song_that">Show song that are unplayable.</string>
<string name="lbl_storage">Storage</string>
<string name="msg_data_saver_st">Data Saver &amp; Storage</string>
<string name="lbl_2022">2022</string>
<string name="lbl_2018">2018</string>
<string name="lbl_audio_quality">Audio Quality</string>
<string name="lbl_sweetener">Sweetener</string>
<string name="lbl_amber_mark">Amber Mark</string>
<string name="lbl">|</string>
<string name="msg_free_up_storage">Free up storage without removing your downloaded contents.</string>
<string name="lbl_50_5_gb">50.5 GB</string>
<string name="lbl_cache">Cache</string>
<string name="msg_save_video_podc">Save video podcasts as audio only.</string>
<string name="msg_remove_all_down">Remove All Downloads</string>
<string name="msg_three_dimension">Three Dimensions Deep</string>
<string name="msg_remove_all_of_t">Remove all of the Hearme content you have downloaded for offline uses.</string>
<string name="lbl_podcasts">Podcasts</string>
<string name="msg_stream_audio_on">Stream Audio Only</string>
<string name="lbl_120_6_mb">120.6 MB</string>
<string name="msg_download_audio">Download Audio Only</string>
<string name="lbl_data_saver">Data Saver</string>
</resources>