<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="gridloremipsumdolRowModel" type="com.musica.app.modules.searchresultalbum.data.model.GridloremipsumdolRowModel"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearThemeLightCo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="vertical">
        <ImageView android:id="@+id/imageImage"
            android:layout_height="@dimen/_184pxh"
            android:layout_width="@dimen/_184pxh"
            android:scaleType="fitXY" cornerRadius="@{@dimen/_28pxh}"
            imageRes="@{@drawable/img_image_255X250}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_image_255X250"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtLoremIpsumDol"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{gridloremipsumdolRowModel.txtLoremIpsumDol}"
            style="@style/txtUrbanistromanbold20" tools:text="@string/lbl_sweetener"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtArtistsName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:letterSpacing="0.01" android:singleLine="true"
            android:text="@{gridloremipsumdolRowModel.txtArtistsName}"
            style="@style/txtUrbanistsemibold14_2" tools:text="@string/lbl_ariana_grande"/>
        <TextView android:ellipsize="end" android:id="@+id/txtZipcode"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:letterSpacing="0.01" android:singleLine="true"
            android:text="@{gridloremipsumdolRowModel.txtZipcode}"
            style="@style/txtUrbanistsemibold14_2" tools:text="@string/lbl_2018"/>
    </LinearLayout>
</layout>
