<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="albumsRowModel" type="com.musica.app.modules.albums.data.model.AlbumsRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowloremipsum"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <ImageView android:id="@+id/imageImage"
            android:layout_height="@dimen/_80pxh"
            android:layout_width="@dimen/_80pxh"
            android:scaleType="fitXY" cornerRadius="@{@dimen/_20pxh}"
            imageRes="@{@drawable/img_image_27}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_image_27"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnloremipsum"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:id="@+id/txtLoremIpsum"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{albumsRowModel.txtLoremIpsum}"
                style="@style/txtUrbanistromanbold18" tools:text="@string/msg_three_dimension"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearAutoLayoutHor"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtDetails"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.01"
                    android:singleLine="true"
                    android:text="@{albumsRowModel.txtDetails}"
                    style="@style/txtUrbanistromanmedium12" tools:text="@string/lbl_amber_mark"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTwelve"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.01"
                    android:singleLine="true"
                    android:text="@{albumsRowModel.txtTwelve}"
                    style="@style/txtUrbanistromanmedium12" tools:text="@string/lbl"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtZipcode"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.01"
                    android:singleLine="true"
                    android:text="@{albumsRowModel.txtZipcode}"
                    style="@style/txtUrbanistromanmedium12" tools:text="@string/lbl_2022"/>
            </LinearLayout>
        </LinearLayout>
        <ImageView android:id="@+id/imageVector"
            android:layout_height="@dimen/_13pxh"
            android:layout_width="@dimen/_3pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_vector_gray_900"
            tools:ignore="ContentDescription" tools:src="@drawable/img_vector_gray_900"/>
    </LinearLayout>
</layout>
